# glommio

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-3rdparty.csv  LICENSE-3rdparty.sh  Makefile  NOTICE  README.md  THIRDPARTY  deny.toml  force-scan  rustfmt.toml  static-analysis.datadog.yml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md  feature.md
.github/actions/cache-setup/: action.yml
.github/templates/: license_check_failed.md
.github/workflows/: ci.yml  datadog-static-analysis.yml  third-party.yml  third-party_exported.yml  third-party_vulnerabilities.yml
examples/: Cargo.toml  cooperative_preempt.rs  deadline_writer.rs  defer.rs  echo.rs  gate.rs  hello_world.rs  hyper.rs  hyper_client.rs  hyper_server.rs  ping_pong.rs  pipeline.rs  proxy.rs  sharding.rs  shared.rs  storage.rs  vsock.rs
glommio/: Cargo.toml  README.uring_sys_iou.md  build.rs  rusturing.c
glommio/benches/: competing_io.rs  echo.rs  executor.rs  foreign_wake.rs  local_channel.rs  noise.rs  nop.rs  preempt.rs  proxy.rs  semaphore.rs  sharding.rs  shared_channel.rs  spsc_queue.rs  tcp.rs  tokio_tcp.rs  udp.rs
glommio/liburing/: Makefile  configure
glommio/liburing/man/: io_uring_enter.2
glommio/liburing/src/: Makefile  queue.c  setup.c
glommio/liburing/src/include/: liburing.h
glommio/liburing/test/: 917257daa0fe-test.c  b19062a56726-test.c  fsync.c  statx.c
glommio/src/: byte_slice_ext.rs  error.rs  executor.rs  free_list.rs  intrusive_collections_ext.rs  lib.rs  multitask.rs  networking.rs  nop.rs  parking.rs  pollable.rs  reactor.rs  read_write_lock.rs  semaphore.rs  shares.rs
glommio/src/channels/: channel_mesh.rs  local_channel.rs  mod.rs  sharding.rs  shared_channel.rs  spsc_queue.rs
glommio/src/controllers/: deadline_queue.rs  mod.rs
glommio/src/executor/: latch.rs  mod.rs  multitask.rs  stall.rs
glommio/src/executor/placement/: linux_sysfs.rs  mod.rs  pq_tree.rs
glommio/src/io/: buffered_file.rs  buffered_file_stream.rs  bulk_io.rs  byte_slice_ext.rs  directory.rs  dma_file.rs  dma_file_stream.rs  dma_open_options.rs  glommio_file.rs  immutable_file.rs  mod.rs  open_options.rs  read_result.rs  sched.rs  stat.rs
glommio/src/iou/: completion_queue.rs  cqe.rs  mod.rs  probe.rs  sqe.rs  submission_queue.rs
glommio/src/iou/registrar/: mod.rs  registered.rs
glommio/src/net/: datagram.rs  mod.rs  stream.rs  tcp_socket.rs  udp_socket.rs  unix.rs  vsock.rs
glommio/src/sync/: gate.rs  mod.rs  read_write_lock.rs  rwlock.rs  semaphore.rs
glommio/src/sys/: blocking.rs  dma_buffer.rs  hardware_topology.rs  membarrier.rs  mod.rs  posix_buffers.rs  source.rs  sysfs.rs  uring.rs
glommio/src/task/: debugging.rs  header.rs  join_handle.rs  mod.rs  raw.rs  state.rs  task_impl.rs  tests.rs  utils.rs  waker_fn.rs
glommio/src/timer/: mod.rs  timer_impl.rs
glommio/src/uring_sys/: mod.rs  syscalls.rs
glommio/tests/: echo_test.rs  linters.rs
scipio/: Cargo.toml  build.rs
scipio/examples/: hello_world.rs
scipio/liburing/examples/: Makefile
scipio/liburing/src/: liburing.map
scipio/liburing/test/: 35fa71a030ca-test.c  Makefile  a0908ae19763-test.c  a4c0b3decb33-test.c  fc2a85cb02ef-test.c  lfs-openat-write.c  lfs-openat.c  link-timeout.c  read-write.c  send_recvmsg.c
scipio/src/: async_collections.rs  dma_file.rs  error.rs  executor.rs  file_stream.rs  free_list.rs  lib.rs  local_semaphore.rs  multitask.rs  networking.rs  parking.rs  pollable.rs  semaphore.rs  shared.rs  shares.rs  timer.rs
scipio/src/channels/: local_channel.rs  mod.rs
scipio/src/collections/: dequeue.rs  mod.rs
scipio/src/controllers/: deadline_queue.rs  mod.rs
scipio/src/io/: buffered_file.rs  buffered_file_stream.rs  directory.rs  dma_file.rs  dma_file_stream.rs  file_stream.rs  mod.rs  read_result.rs  scipio_file.rs
scipio/src/iou/: iou.rs  mod.rs  registrar.rs  sqe.rs
scipio/src/sys/: mod.rs  posix_buffers.rs  sysfs.rs  uring.rs
scipio/src/task/: mod.rs  raw.rs  task.rs  task_impl.rs  waker_fn.rs
scipio/src/timer/: mod.rs  timer.rs  timer_impl.rs
scipio/src/uring_sys/: mod.rs  uring_sys.rs
scipio/tests/: tidy.rs
src/: async_collections.rs  dma_file.rs  error.rs  executor.rs  lib.rs  local_semaphore.rs  multitask.rs  networking.rs  parking.rs  pollable.rs  timer.rs
src/sys/: mod.rs  posix_buffers.rs  uring.rs  uring_buffers.rs
src/task/: header.rs  join_handle.rs  mod.rs  raw.rs  state.rs  task.rs  utils.rs  waker_fn.rs
