[package]
name = "examples"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
publish = false
edition = "2018"

[dev-dependencies]
futures = "0.3.5"
futures-lite = "1.11.1"
ansi_term = "0.12.1"
glommio = { path = "../glommio" }
pretty-bytes = "0.2.2"
clap = "2.33"
sys-info = "0.7.0"
fastrand = "1.4.0"
num_cpus = "1.13.0"

# hyper and tokio for the hyper example. We just need the traits from Tokio
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1" }

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "ping_pong"
path = "ping_pong.rs"

[[example]]
name = "defer"
path = "defer.rs"

[[example]]
name = "cooperative_preempt"
path = "cooperative_preempt.rs"

[[example]]
name = "deadline"
path = "deadline_writer.rs"

[[example]]
name = "storage"
path = "storage.rs"

[[example]]
name = "channel_mesh"
path = "sharding.rs"

[[example]]
name = "hyper"
path = "hyper.rs"

[[example]]
name = "gate"
path = "gate.rs"
