[package]
name = "glommio"
version = "0.6.0"
authors = [
    "Glauber Costa <glommer@gmail.com>",
    "Hippolyte Barraud <hippolyte.barraud@datadoghq.com>",
    "DataDog <info@datadoghq.com>"
]
edition = "2018"
description = "Glommio is a thread-per-core framework that aims to make the task of writing highly parallel asynchronous applications in a thread-per-core architecture easier for rustaceans"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DataDog/glommio"
homepage = "https://github.com/DataDog/glommio"
keywords = ["linux", "rust", "async", "iouring", "thread-per-core"]
categories = ["asynchronous", "concurrency", "os", "filesystem", "network-programming"]
readme = "../README.md"

[dependencies]
log = "~0.4"
concurrent-queue = "1.2"
futures-lite = "1.12"
libc = "~0.2"
socket2 = { version = "~0.3", features = ["unix", "reuseport"] }
nix = "~0.23.0"
bitflags = "1.3"
bitmaps = "3.1.0"
typenum = "1.14"
scoped-tls = "1.0.0"
rlimit = "~0.6"
lazy_static = "1.4"
enclose = "1.1"
scopeguard = "1.1"
pin-project-lite = "~0.2"
smallvec = { version = "1.7", features = ["union"] }
buddy-alloc = "~0.4"
ahash = "~0.7"
intrusive-collections = "~0.9"
lockfree = "~0.5"
membarrier = "~0.2"
tracing = "~0.1"
crossbeam = "~0.8"

[dev-dependencies]
futures = "~0.3"
fastrand = "1.5"
tokio = { version = "1.12", default-features = false, features = ["rt", "macros", "rt-multi-thread", "net", "io-util", "time", "sync"] }
rand = "~0.8"
tracing-subscriber = "~0.2"
pretty_env_logger = "~0.4"
hdrhistogram = "7.3.0"

[build-dependencies]
cc = "1.0"

[features]
bench = []
debugging = []

[[bench]]
name = "executor"
harness = false

[[bench]]
name = "semaphore"
harness = false

[[bench]]
name = "local_channel"
harness = false

[[bench]]
name = "shared_channel"
harness = false

[[bench]]
name = "preempt"
harness = false

[[bench]]
name = "tcp"
harness = false

[[bench]]
name = "tokio_tcp"
harness = false

[[bench]]
name = "udp"
harness = false

[[bench]]
name = "nop"
harness = false
required-features = ["bench"]

[[bench]]
name = "sharding"
harness = false

[[bench]]
name = "spsc_queue"
harness = false

[[bench]]
name = "foreign_wake"
harness = false

[[bench]]
name = "proxy"
harness = false

[[bench]]
name = "echo"
harness = false
