[package]
name = "scipio"
version = "0.1.0-alpha"
authors = [ "Glauber Costa <glauber@datadoghq.com>",
            "Hippolyte Barraud <hippolyte.barraud@datadoghq.com>",
            "DataDog"]
edition = "2018"
description = "A set of utilities to allow one to write thread per core applications"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DataDog/scipio"
homepage = "https://github.com/DataDog/scipio"
keywords = ["uring", "reactor", "thread-per-core"]
categories = ["asynchronous", "os"]
readme = "../README.md"

[dependencies]
log = "0.4"
concurrent-queue = "1.1.2"
futures-lite = "1.11.1"
libc = "0.2.73"
socket2 = { version = "0.3.12", features = ["pair", "unix"] }
nix = "0.16.0"
aligned_alloc = "0.1"
bitmaps = "2.1.0"
typenum = "1.12"
scoped-tls = "1.0.0"
rlimit = "0.3.0"
lazy_static = "1.4.0"
enclose = "1.1.8"
scopeguard = "1.1.0"
pin-project-lite = "0.1.10"
bitflags = "1.2.0"

[dev-dependencies]
futures = "0.3.5"

[build-dependencies]
cc = "1.0.47"
